Now Public Domain OR ISC
Signed-off-by: xplshn <anto@xplshn.com.ar>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="text-[8px] mt-2 text-center uppercase tracking-widest">
-                All rights reserved to the individual. Intellectual property is an oxymoron.
+                All rights reserved to the individual. Proudly released into the Public Domain or licensed under the ISC 
             </div>
         </footer>
     </div>
